--- a/lang/en.json
+++ b/lang/en.json
@@ -1,3 +1,25 @@
 {
-    "register_title": "Sign Up and Start Learning!"
+    "label_success": "Success!",
+    "label_error": "Error!",
+    "login_title": "Log In to Your Skola Account!",
+    "register_title": "Sign Up and Start Learning!",
+    "label_username": "Username",
+    "label_email": "Email",
+    "label_password": "Password",
+    "label_remember": "Remember me",
+    "label_forgot": "Forgot password",
+    "btn_login": "Log In",
+    "btn_register": "Sign Up",
+    "txt_login": "Don't have an account?",
+    "txt_register": "Already have an account?",
+
+    "page_home": "Home",
+    "page_categories": "Categories",
+    "page_instructors": "Instructors",
+    "page_courses": "My Courses",
+    "page_favorites": "My Favotites",
+    "page_about": "About Us",
+    "page_profile": "Profile",
+    "page_logout": "Log Out",
+    "placeholder_search": "What do you want to learn?"
 }
