change key of en.json file

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,25 +1,25 @@
 {
-    "label_success": "Success!",
-    "label_error": "Error!",
+    "success": "Success!",
+    "error": "Error!",
     "login_title": "Log In to Your Skola Account!",
     "register_title": "Sign Up and Start Learning!",
-    "label_username": "Username",
-    "label_email": "Email",
-    "label_password": "Password",
-    "label_remember": "Remember me",
-    "label_forgot": "Forgot password",
-    "btn_login": "Log In",
-    "btn_register": "Sign Up",
-    "txt_login": "Don't have an account?",
-    "txt_register": "Already have an account?",
+    "username": "Username",
+    "email": "Email",
+    "password": "Password",
+    "remember": "Remember me",
+    "forgot": "Forgot password",
+    "login": "Log In",
+    "register": "Sign Up",
+    "login_label": "Don't have an account?",
+    "register_label": "Already have an account?",
 
-    "page_home": "Home",
-    "page_categories": "Categories",
-    "page_instructors": "Instructors",
-    "page_courses": "My Courses",
-    "page_favorites": "My Favotites",
-    "page_about": "About Us",
-    "page_profile": "Profile",
-    "page_logout": "Log Out",
+    "home": "Home",
+    "categories": "Categories",
+    "instructors": "Instructors",
+    "courses": "My Courses",
+    "favorites": "My Favotites",
+    "about": "About Us",
+    "profile": "Profile",
+    "logout": "Log Out",
     "placeholder_search": "What do you want to learn?"
 }
