--- a/lang/en.json
+++ b/lang/en.json
@@ -3,15 +3,18 @@
     "error": "Error!",
     "login_title": "Log In to Your Skola Account!",
     "register_title": "Sign Up and Start Learning!",
+    "forgot_title": "Forget Password",
+    "reset_title" : "Reset Password",
     "username": "Username",
     "email": "Email",
     "password": "Password",
     "remember": "Remember me",
-    "forgot": "Forgot password",
     "login": "Log In",
     "register": "Sign Up",
     "login_label": "Don't have an account?",
     "register_label": "Already have an account?",
+    "send_link_reset": "Send Password Reset Link",
+
 
     "home": "Home",
     "categories": "Categories",
@@ -22,7 +25,6 @@
     "profile": "Profile",
     "logout": "Log Out",
     "placeholder_search": "What do you want to learn?",
-
     "beginner_level": "Beginner",
     "intermediate_level": "Intermediate",
     "advanced_level": "Advanced",
