update link for header

--- a/lang/en.json
+++ b/lang/en.json
@@ -18,7 +18,7 @@
 
     "home": "Home",
     "categories": "Categories",
-    "instructors": "Instructors",
+    "instructor": "Instructor",
     "courses": "My Courses",
     "favorites": "My Favotites",
     "about": "About Us",
