--- a/lang/en.json
+++ b/lang/en.json
@@ -31,5 +31,19 @@
     "advanced_level": "Advanced",
 
     "english_lang": "English",
-    "vietnamese_lang": "Vietnamese"
+    "vietnamese_lang": "Vietnamese",
+
+    "my_courses": " My Courses",
+    "all_courses": "All Courses",
+    "my_list": "My List",
+    "tools": "Tools",
+    "sort_by": "Sort by",
+    "filter_by": "Filter by",
+    "search": "Search",
+
+    "course.sort.option_one": "New Courses",
+    "course.sort.option_two": "Most Reviewed",
+    "course.sort.option_three": "Highest Rated",
+    "course.sort.option_four": "Highest Student",
+    "course.filter.all_categories": "All Categories"
 }
