--- a/lang/en.json
+++ b/lang/en.json
@@ -20,6 +20,7 @@
     "categories": "Categories",
     "instructors": "Instructors",
     "courses": "My Courses",
+    "courses_list" : "List Courses",
     "favorites": "My Favotites",
     "about": "About Us",
     "profile": "Profile",
