Add new migration, clear the code in resetpassword and forgotpassword controller

--- a/lang/en.json
+++ b/lang/en.json
@@ -3,7 +3,7 @@
     "error": "Error!",
     "login_title": "Log In to Your Skola Account!",
     "register_title": "Sign Up and Start Learning!",
-    "forgot_title": "Forget Password",
+    "forgot_title": "Forgot Password",
     "reset_title" : "Reset Password",
     "username": "Username",
     "email": "Email",
